fixed alignment on link

--- a/ChatPlusPlus/src/features/auth/login/Login.module.css
+++ b/ChatPlusPlus/src/features/auth/login/Login.module.css
@@ -50,7 +50,6 @@ html, body, #root {
 
 .auth-links {
   margin-bottom: 16px;
-  text-align: right;
 }
 
 .auth-links a,
